# cvxpy_summary

./: .gitignore  README.md  pyproject.toml  readme.md
cvxpy_summary/: __init__.py  summary.py
